[project]
name = "opalsky_nodes"
description = "A set of custom nodes for ComfyUI that provides enhanced string manipulation and prompt variant generation functionality for AI workflows."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/OpalSky-AI/OpalSky_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "OpalSky_Nodes"
Icon = ""
